# scgs_solution_home

./: pyproject.toml
backend/: pyproject.toml  render.yaml  requirements.txt
backend/bookings/: admin.py  models.py  serializers.py
backend/bookings/migrations/: 0001_initial.py  0002_booking_experience.py
backend/categories/: admin.py  serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/common/: models.py
backend/config/: authentication.py  settings.py  urls.py
backend/direct_messages/: admin.py  models.py
backend/direct_messages/migrations/: 0001_initial.py
backend/experiences/: admin.py  models.py  views.py
backend/experiences/migrations/: 0001_initial.py  0002_experience_category.py
backend/medias/: admin.py  models.py  views.py
backend/medias/migrations/: 0001_initial.py  0002_auto_20230124_1635.py  0003_alter_photo_room.py
backend/reviews/: admin.py  models.py  serializers.py
backend/reviews/migrations/: 0001_initial.py  0002_auto_20230124_1635.py
backend/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/rooms/migrations/: 0001_initial.py  0002_amenity_created_at_amenity_updated_at_and_more.py  0003_alter_amenity_options_room_name.py  0004_room_category.py  (+1 more)
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  (+1 more)
backend/wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
front/: package-lock.json  package.json
front/src/: App.tsx  api.ts  index.tsx  router.tsx  theme.ts  types.d.ts
(+23 files in other folders)
